--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1417,6 +1417,7 @@ div.owl-controls div.owl-nav div:hover {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  border-radius: 10px;
 }
 
 .product-image img:hover {
