--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3008,11 +3008,88 @@ table.order-details tbody td {
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
 }
 
-/* -----------------------------------------------------------------------------
+/* -----------------------------------------------------------------------------*/
 
-# 404 Page Styles
+.card{
+  position: relative;
+  cursor: pointer;
+}
 
------------------------------------------------------------------------------ */
+.card .face{
+  width: 300px;
+  height: 300px;
+  transition: 0.5s;
+}
+
+.card .face.face1{
+  position: relative;
+  background: #c65102;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.card:hover .face.face1{
+  background: #ff8c00;
+  transform: translateY(0);
+}
+
+.card .face.face1 .content{
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.card:hover .face.face1 .content{
+  opacity: 1;
+}
+
+.card .face.face1 .content img{
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 20px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  width: 90%;
+  border-radius: 0.01px;
+  margin-bottom: 20px;
+}
+
+.card .face.face1 .content h3{
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.card .face.face2{
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-200px);
+}
+
+.card:hover .face.face2{
+  transform: translateY(0);
+}
+
+.card .face.face2 .content p{
+  margin: 0;
+  padding: 0;
+}
+
+
+
+
+/*----------------------------------------------------------------------------- */
 .error-text i {
   font-size: 90px;
   margin-bottom: 30px;
