--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -247,6 +247,29 @@ html{
 	background-color: #424242;
 	transition: width 0.2s ease;
 }
+.read-more-button{
+  padding-left: -100px;
+}
+.blog-bar {
+  padding-top:0px;
+  transform: translateY(-12px);
+	left: 0px;
+	width: 349px;
+	height: 5px;
+	margin: 0px 0;
+	border-radius: 1px;
+	background-color: #F28123;
+	transition: width 0.2s ease;
+}
+.blog-bar1{
+  transform: translateY(-2px);
+}
+.blog-bar3{
+  transform: translateY(-11px);
+}
+.blog-bar2{
+  transform: translateY(-4px);
+}
 .projcard-blue .projcard-bar { background-color: #0088FF; }
 .projcard-blue::before { background-image: linear-gradient(-70deg, #0088FF, transparent 50%); }
 .projcard-blue:nth-child(2n)::before { background-image: linear-gradient(-250deg, #0088FF, transparent 50%); }
