--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,102 @@ Author URI: https://imransdesign.com/
 Version: 1.0
 */
 /*------------------------------------------------*/
+/*------------academics------------*/
+.bontainer{
+  width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 15px;
+  margin: 0 auto;
+}
+
+.cbard{
+  position: relative;
+  width: 350px;
+  height: 400px;
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0 15px 60px rgba(0,0,0, .5);
+  border-radius: 15px;
+}
+
+.cbard .face{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cbard .face.face1{
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.cbard .face.face1 h2{
+  margin: 0;
+  padding: 0;
+}
+
+.cbard .face.face1 .content{
+  font-size:1.2em;
+  margin:0;
+  padding:0 0 1em 0;
+  font-weight:500;
+}
+
+.cbard .face.face2{
+  background: #111;
+  transition: 0.5s;
+}
+
+.cbard:nth-child(1) .face.face2{
+  background: linear-gradient(45deg, #3503ad, #f7308c);
+  border-radius: 15px;
+}
+
+.cbard:nth-child(2) .face.face2{
+  background: linear-gradient(45deg, #ccff00, #09afff);
+  border-radius: 15px;
+}
+
+.cbard:nth-child(3) .face.face2{
+  background: linear-gradient(45deg, #e91e63, #ffeb3b);
+  border-radius: 15px;
+}
+
+.cbard:hover .face.face2{
+  height: 60px;
+  border-radius: 0 0 15px 15px;
+}
+
+.cbard .face.face2:before{
+  content:'';
+  position: absolute;
+  top:0;
+  left:0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255,255,255, 0.1);
+  border-radius: 15px 0 0 15px;
+}
+
+.cbard .face.face2 h2{
+  margin: 0;
+  padding: 0;
+  font-size: 10em;
+  color: #fff;
+  transition: 0.5s;
+  text-shadow: 0 2px 5px rgba(0,0,0, .2);
+}
+
+.cbard:hover .face.face2 h2{
+  font-size: 2em;
+}
+/*------------academics--------x--*/
 /*----------blog-read-more---------------*/
 .blog-read-more {
   font-family: 'Poppins', sans-serif;
@@ -455,10 +551,12 @@ html{
 .about{
   width: 100%;
   padding: 78px 0px;
+
+}
+.nbout{
   background-color: #FFE53B;
   background-image: linear-gradient(147deg, #FE5F75 0%, #FC9842 74%);
 }
-
 .box img{
   height: auto;
   width: 400px;
@@ -3320,7 +3418,7 @@ table.order-details tbody td {
 }
 
 .card:hover .face.face1{
-  background: #ff8c00;
+  background: #2bff00;
   transform: translateY(0);
 }
 
