--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@ Version: 1.0
 /*------------academics------------*/
 .bontainer{
   width: 1200px;
+  min-height: 500px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 15px;
@@ -42,7 +43,7 @@ Version: 1.0
   padding: 20px;
 }
 
-.cbard .face.face1 h2{
+.cbard .face.face1 h3{
   margin: 0;
   padding: 0;
 }
@@ -60,12 +61,12 @@ Version: 1.0
 }
 
 .cbard:nth-child(1) .face.face2{
-  background: linear-gradient(45deg, #3503ad, #f7308c);
+  background: linear-gradient(45deg, #e91e63, #ffeb3b);
   border-radius: 15px;
 }
 
 .cbard:nth-child(2) .face.face2{
-  background: linear-gradient(45deg, #ccff00, #09afff);
+  background: linear-gradient(45deg, #e91e63, #ffeb3b);
   border-radius: 15px;
 }
 
@@ -90,10 +91,10 @@ Version: 1.0
   border-radius: 15px 0 0 15px;
 }
 
-.cbard .face.face2 h2{
+.cbard .face.face2 h3{
   margin: 0;
   padding: 0;
-  font-size: 10em;
+  font-size: 8em;
   color: #fff;
   transition: 0.5s;
   text-shadow: 0 2px 5px rgba(0,0,0, .2);
