--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@ Version: 1.0
 /*------------academics------------*/
 .bontainer{
   width: 1200px;
-  min-height: 500px;
+  min-height: 550px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 15px;
@@ -20,7 +20,7 @@ Version: 1.0
 .cbard{
   position: relative;
   width: 350px;
-  height: 400px;
+  height: 490px;
   margin: 0 auto;
   background: #fff;
   box-shadow: 0 15px 60px rgba(0,0,0, .5);
@@ -47,6 +47,24 @@ Version: 1.0
   margin: 0;
   padding: 0;
 }
+
+.icon {
+  color: #fabd44;
+  font-size: 8em;
+  text-align: center;
+}
+
+.info {
+  text-align: center;
+}
+
+.info h3 {
+  color: #fabd44;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+}
+
 
 .cbard .face.face1 .content{
   font-size:1.2em;
@@ -94,7 +112,7 @@ Version: 1.0
 .cbard .face.face2 h3{
   margin: 0;
   padding: 0;
-  font-size: 8em;
+  font-size: 5em;
   color: #fff;
   transition: 0.5s;
   text-shadow: 0 2px 5px rgba(0,0,0, .2);
