--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,6 +65,14 @@ Version: 1.0
   margin: 10px;
 }
 
+.info p {
+  color: #000000;
+  font-size: 1em;
+  font-weight: 500;
+  margin: 10px;
+}
+
+
 
 .cbard .face.face1 .content{
   font-size:1.2em;
