--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,8 +13,8 @@ Version: 1.0
   padding:5rem;
   font-size: 1.2rem;
   opacity: 1;
-  transform: translateX(0);
-  transition: all 0.5s ease-in-out;
+  transform: translateX(0px);
+  transition: all 5s ease-in-out;
 }
 
 .image{
@@ -39,6 +39,7 @@ Version: 1.0
   opacity: 0;
   transform: translateX(-50px);
 }
+
 /*------------academics------------*/
 .bontainer{
   width: 1200px;
