--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,12 @@ Author URI: https://imransdesign.com/
 Version: 1.0
 */
 /*------------------------------------------------*/
+
+/*------------------------------------------------*/
+.owl-carousel {
+  overflow: hidden;
+}
+/*------------------------------------------------*/
 .main-menu a:hover{
   color: #F28123;
 }
