--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,12 @@ Version: 1.0
 .owl-carousel {
   overflow: hidden;
 }
+
+@media only screen and (max-width: 600px) {
+  .bontainer {
+    display: block;
+  }
+}
 /*------------------------------------------------*/
 .main-menu a:hover{
   color: #F28123;
@@ -51,7 +57,7 @@ Version: 1.0
 
 /*------------academics------------*/
 .bontainer{
-  width: 1200px;
+  width: 90%;
   min-height: 550px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
@@ -61,7 +67,7 @@ Version: 1.0
 
 .cbard{
   position: relative;
-  width: 350px;
+  width: 100%;
   height: 490px;
   margin: 0 auto;
   background: #fff;
