--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,11 @@ Version: 1.0
     display: block;
   }
 }
+@media only screen and (max-width: 600px) {
+  .cbard {
+    width: 300px;
+  }
+}
 /*------------------------------------------------*/
 .main-menu a:hover{
   color: #F28123;
