--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,11 +16,10 @@ Version: 1.0
 @media only screen and (max-width: 600px) {
   .bontainer {
     display: block;
+    min-height: 100px;
   }
-}
-@media only screen and (max-width: 600px) {
   .cbard {
-    width: 300px;
+    width: 100px;
   }
 }
 /*------------------------------------------------*/
