--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -497,22 +497,19 @@ html{
     padding-top:0px;
     transform: translateY(-12px);
     left: 0px;
-    width: 349px;
+    width: 92%;
     height: 5px;
     margin: 0px 0;
     border-radius: 1px;
     background-color: #F28123;
     transition: width 0.2s ease;
 }
-.blog-bar1{
-  transform: translateY(-2px);
+.read-more-bar {
+  position: absolute;
+  bottom: 3%;
+  width: 100%;
 }
-.blog-bar3{
-  transform: translateY(-11px);
-}
-.blog-bar2{
-  transform: translateY(-4px);
-}
+
 .projcard-blue .projcard-bar { background-color: #0088FF; }
 .projcard-blue::before { background-image: linear-gradient(-70deg, #0088FF, transparent 50%); }
 .projcard-blue:nth-child(2n)::before { background-image: linear-gradient(-250deg, #0088FF, transparent 50%); }
