--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@ Version: 1.0
 margin-top: 10px;
 }
 }
+
 /*------------------------------------------------*/
 .owl-carousel {
   overflow: hidden;
@@ -33,9 +34,9 @@ margin-top: 10px;
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 825px) and (max-width: 1229px){
   .cbard3{
-    transform: translateX(0%);
+    transform: translateX(60%);
   }
 
 }
